# pgraph-tutorial

./: .gitignore  CLAUDE.md  README.md  Tutorial_DATA_MONSTER.md  pyproject.toml
data-queue/done/: 1763708998443193000_AMF-Lean-Automation-Aktion.json  1763709436063390000_AMF-Lean-Automation-Aktion.json  1763709436063926000_DB_Ticket_837343284686.json  1763709436064185000_Delegation_Canvas.json  1763709436064580000_Einfuhrung-in-die-Systemtheorie.json  1763709436064854000_Metaplan-Whitepaper_Organisationskultur.json  1763709436065079000_Schutzraum_Beispiel.json  1763709436065392000_Techem_Download_Dokumente 3.json
docs/: knowledge_graph_extraction.md  source_abstraction.md
pgt/: llm_extraction.py  p_00_main.py  p_01_init_db.py  p_02_fill_queue.py  p_03_ingest_from_queue.py  p_99_utils_llm.py
tests/: test_llm_extraction.py
